structural-typing/tests/ui/type_mismatch_assignment.stderr
error[E0308]: mismatched types
  --> tests/ui/type_mismatch_assignment.rs:12:16
   |
12 |     takes_full(user_empty);
   |     ---------- ^^^^^^^^^^ expected `User`, found `User<FieldSet<Absent>>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `User<user::FieldSet<structural_typing::presence::Present>>`
              found struct `User<user::FieldSet<structural_typing::presence::Absent>>`
note: function defined here
  --> tests/ui/type_mismatch_assignment.rs:8:4
   |
 8 | fn takes_full(_user: User) {}
   |    ^^^^^^^^^^ -----------
